<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_calculate"
            android:icon="@drawable/calc"
            android:title="@string/calculator"/>
        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/brouser"
            android:title="@string/brouser"/>
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/player"
            android:title="@string/player"/>
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/sensors"
            android:title="@string/sensors"/>
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/photo"/>
        <item
            android:id="@+id/nav_audio_record"
            android:icon="@drawable/audiorecord"
            android:title="@string/audio_record" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/maps"
            android:title="@string/maps"/>
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/database"
            android:title="@string/database"/>
        <item
            android:id="@+id/nav_net_info"
            android:icon="@drawable/info"
            android:title="@string/net_info"/>
    </group>
</menu>